Added the remain db functionality.
