# api/controllers/job_listing.js
@@ -1,6 +1,6 @@
 'use strict';
     var db = require('../../config/db');
-    module.exports = {getAll, save, getById, update, remove};
+    module.exports = {getAll, save, getById, update, remove, getApplicantsByJobListingId, addApplicant, getApplicantById, updateApplicantStatus, removeApplicant};
 
 /*  ===================
  *  Path: /job-listings
@@ -17,9 +17,11 @@ function getAll(req, res, next) {
 
 //POST
 function save(req, res, next) {
-    db.save(req.body).then(res.json({success: "Success", description: "Job listing added"}))
+    db.save(req.body)
+    .then(res.json({success: 1, description: "Job listing added"}))
     .catch(err => {
         console.error(err);
+        res.status(404).send();
     });
 }
 /*
@@ -32,36 +34,135 @@ function save(req, res, next) {
 
 //GET
 function getById(req, res, next) {
-    var id = req.swagger.params.id.value;
-    
-    db.findJobListingById(id).then(jobListing => {
-        jobListing.applicants = [];
-        res.json(jobListing);
+    db.findJobListingById(req.swagger.params.id.value).then(jobListing => {
+        if(jobListing) {
+            res.json(jobListing);
+        } else {
+            res.status(404).send();    
+        }
     }).catch(err => {
         console.error(err);
+        res.status(404).send();
     });
 }
 
 //PUT
 function update(req, res, next) {
-    var id = req.swagger.params.id.value;
-    var jobListing = req.body;
-    if(db.update(id, jobListing)) {
-        res.json({success: 1, description: "Job listing updated."});
-    } else {
+    db.update(req.swagger.params.id.value, req.body)
+    .then(result => {
+        if(result === 1) {
+            res.json({success: 1, description: "Job listing updated"})
+        } else {
+            res.status(404).send();
+        }
+    })
+    .catch(err => {
+        console.error(err);
         res.status(404).send();
-    }
+    });
 }
 
 //DELETE
 function remove(req, res, next) {
-    var id = req.swagger.params.id.value;
-    if(db.remove(id)) {
-        res.json({success: 1, description: "Job listing removed."});
-    } else {
-        res.status(204).send();
-    }
+    db.remove(req.swagger.params.id.value)
+    .then(result => {
+        if(result === 1) {
+            res.json({success: 1, description: "Job listing removed."})
+        } else {
+            res.status(404).send();    
+        }
+    })
+    .catch(err => {
+        res.status(404).send();
+    });
 }
 /*
+ *  ====================
+ */
+
+/*  ====================
+ *  Path: /job-listings/{id}/applicants
+ */
+//GET
+function getApplicantsByJobListingId(req, res, next) {
+    db.getAllApplicantsForJobListing(req.swagger.params.id.value)
+    .then(result => {
+        if(result.length > 0) {
+            res.json({applicants: result});
+        } else {
+            res.status(404).send();
+        }
+    }).catch(err => {
+        console.error(err);
+        res.status(404).send();
+    });
+}
+
+//POST
+function addApplicant(req, res, next) {
+    db.addApplicantForJobListing(req.swagger.params.id.value, req.body)
+    .then(res.json({success: 1, description: "Applicant added"}))
+    .catch(err => {
+        console.error(err);
+        res.status(404).send();
+    });
+}
+
+/*
+ *  ====================
+ */
+
+ /*  ====================
+ *  Path: /applicants/{id}
+ */
+
+//GET
+function getApplicantById(req, res, next) {
+    db.getApplicantById(req.swagger.params.id.value)
+    .then(applicant => {
+        if(applicant) {
+            res.json(applicant);
+        } else {
+            res.status(404).send();    
+        }
+    })
+    .catch(err => {
+        console.error(err);
+        res.status(404).send();
+    });
+}
+
+//PUT
+function updateApplicantStatus(req, res, next) {
+    db.updateApplicantById(req.swagger.params.id.value, req.body)
+    .then(result => {
+        if(result === 1) {
+            res.json({success: 1, description: "Applicant updated"})
+        } else {
+            res.status(404).send();
+        }
+    })
+    .catch(err => {
+        console.error(err);
+        res.status(404).send();
+    });
+}
+
+//DELETE
+function removeApplicant(req, res, next) {
+    db.removeApplicantById(req.swagger.params.id.value)
+    .then(result => {
+        if(result === 1) {
+            res.json({success: 1, description: "Applicant removed."})
+        } else {
+            res.status(404).send();    
+        }
+    })
+    .catch(err => {
+        res.status(404).send();
+    });
+}
+
+ /*
  *  ====================
  */
